fixed spacing errors

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,8 @@ body {
 }
 
 .img1-container {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       rgba(214, 105, 85, 0.75),
       rgba(214, 105, 85, 0.75)
     ),
@@ -95,7 +96,8 @@ body {
 }
 
 .img2-container {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       rgba(214, 105, 85, 0.75),
       rgba(214, 105, 85, 0.75)
     ),
@@ -310,7 +312,8 @@ body {
   }
 
   .img1-container {
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         rgba(214, 105, 85, 0.3),
         rgba(214, 105, 85, 0.3)
       ),
@@ -320,7 +323,8 @@ body {
   }
 
   .img2-container {
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         rgba(214, 105, 85, 0.3),
         rgba(214, 105, 85, 0.3)
       ),
